--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 		</p>
 
 		<p>
-			<a href="http://chidiangongzi.github.io/"><span class="underline">我的个人博客</span></a>
+			<a href="http://chidiangongzi.github.io/blog"><span class="underline">我的个人博客</span></a>
 		</p>
 
 		<div id="jinrishici-sentence" style="font-weight: 700;">LIFE IS FANTASTIC!。</div>
