--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
 	<div id="content">
-		<h1 class="title">痴癫公子</h1>
+		<h1 class="title">我不会搞科研</h1>
 		<p>
 			<b><b>人生两苦，想要却不得，拥有却失去。 </b></b>
 		</p>
