--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 
 		<p>
 			<a href="./nav.html"><span class="underline">导航</span></a> ➭ <a href="./idea.html"><span
-					class="underline">我的想法</span></a> ➯ <a href="./wiki.html"><span class="underline">我的百科</span></a> ➯ <a
-				href="diary.html"><span class="underline">我的日记</span></a> ➯ <a href="aboutMe.html"><span
-					class="underline">关于我</span></a>
+					class="underline">我的想法</span></a> ➯ <a href="https://chidiangongzi.github.io/blog/"><span
+					class="underline">我的全部博客</span></a> ➯ <a href="diary.html"><span class="underline">我的日记</span></a> ➯ <a
+				href="aboutMe.html"><span class="underline">关于我</span></a>
 		</p>
 
 		<table>
