--- a/diary.html
+++ b/diary.html
@@ -26,11 +26,21 @@
 					<li><a href="#orga45b7be">日志</a>
 						<ul>
 							<li><a href="#org3c21508"><span class="timestamp-wrapper"><span class="timestamp">[2021-06-07 Mon 12:34]
-										</span></span> - 轻度躁狂的几天，稍微整理一下自己的博客</a></li>
+										</span></span> - 轻度躁狂的几天</a></li>
 						</ul>
 					</li>
 				</ul>
 			</div>
+		</div>
+	</div>
+
+	<div id="outline-container-org9c53c99" class="outline-3">
+		<h3 id="org9c53c99"><span class="timestamp-wrapper"><span class="timestamp">[2021-06-07 Mon 12:34] </span></span> -
+			日志</h3>
+		<div class="outline-text-3" id="text-org9c53c99">
+			<p>
+				轻度躁狂的几天，稍微整理一下自己的博客，调整一下吧。
+			</p>
 		</div>
 	</div>
 	<div id="postamble" class="status">
