--- a/diary.html
+++ b/diary.html
@@ -35,7 +35,7 @@
 	</div>
 
 	<div id="outline-container-org9c53c99" class="outline-3">
-		<h3 id="org9c53c99"><span class="timestamp-wrapper"><span class="timestamp">[2021-06-07 Mon 12:34] </span></span> -
+		<h3 id="orga45b7be"><span class="timestamp-wrapper"><span class="timestamp">[2021-06-07 Mon 12:34] </span></span> -
 			日志</h3>
 		<div class="outline-text-3" id="text-org9c53c99">
 			<p>
